--- a/src/app/components/theme-button/theme-button.component.html
+++ b/src/app/components/theme-button/theme-button.component.html
@@ -1,2 +1,1 @@
-<input type="checkbox" name="checkbox" class="switch" (change)="changeTheme($event.target.checked)"
-  [checked]="themeNameChecked">
+<input type="checkbox" name="checkbox" class="switch" (change)="changeTheme($event)" [checked]="themeNameChecked">
