--- a/src/app/components/journal-table/journal-table.component.scss
+++ b/src/app/components/journal-table/journal-table.component.scss
@@ -19,7 +19,7 @@ h3 {
 
 mat-table {
   max-width: 90%;
-  margin: 10px auto;
+  margin: 20px auto;
   overflow: auto;
 
   th,
@@ -34,7 +34,7 @@ mat-table {
   }
 
   [mat-cell].fullName {
-    padding: 3px;
+    padding: 0 10px;
     text-align: left;
   }
 
