--- a/src/app/containers/classes/classes.component.html
+++ b/src/app/containers/classes/classes.component.html
@@ -6,11 +6,8 @@
     <webui-create-class></webui-create-class>
 </div>
 
-<mat-accordion>
-    <mat-expansion-panel hideToggle class="mainExpansion">
-        <mat-expansion-panel-header>
-            <mat-panel-title>Активні класи</mat-panel-title>    
-        </mat-expansion-panel-header>
+<mat-tab-group mat-stretch-tabs class='tab'>
+    <mat-tab label="Активні">
         <mat-accordion>
             <mat-expansion-panel *ngFor="let activeClass of activeUniqueClassList | keyvalue: sortKeys" hideToggle
                 class="groupofclasses">
@@ -25,11 +22,9 @@
                     </ng-container>
                     <ng-container matColumnDef="expandedDetail">
                         <td mat-cell *matCellDef="let class" [attr.colspan]="displayedColumns.length">
-                            <div class="class-detail"
-                                [@detailExpand]="class == expandedElement ? 'expanded' : 'collapsed'">
-                                <div class="class-description">
-                                    {{class.numOfStudents}}    {{class.id}}
-                                </div>
+                            <div class="class-detail" [@detailExpand]="class == expandedElement ? 'expanded' : 'collapsed'">
+                                <webui-class-edit [class]="class" *ngIf="class == expandedElement">
+                                </webui-class-edit>
                             </div>
                         </td>
                     </ng-container>
@@ -42,12 +37,9 @@
                 </table>
             </mat-expansion-panel>
         </mat-accordion>
-    </mat-expansion-panel>
-
-    <mat-expansion-panel hideToggle class="mainExpansion">
-        <mat-expansion-panel-header>
-            <mat-panel-title>Неактивні класи</mat-panel-title>
-        </mat-expansion-panel-header>
+    </mat-tab>
+    
+    <mat-tab label="Не активні">
         <mat-accordion>
             <mat-expansion-panel *ngFor="let nonActiveClass of nonActiveUniqueClassList | keyvalue: sortKeys" hideToggle
                 class="groupofclasses">
@@ -62,11 +54,9 @@
                     </ng-container>
                     <ng-container matColumnDef="expandedDetail">
                         <td mat-cell *matCellDef="let class" [attr.colspan]="displayedColumns.length">
-                            <div class="class-detail"
-                                [@detailExpand]="class == expandedElement ? 'expanded' : 'collapsed'">
-                                <div class="class-description">
-                                    {{class.numOfStudents}}
-                                </div>
+                            <div class="class-detail" [@detailExpand]="class == expandedElement ? 'expanded' : 'collapsed'">
+                                <webui-class-edit [class]="class" *ngIf="class == expandedElement">
+                                </webui-class-edit>
                             </div>
                         </td>
                     </ng-container>
@@ -79,5 +69,5 @@
                 </table>
             </mat-expansion-panel>
         </mat-accordion>
-    </mat-expansion-panel>
-</mat-accordion>
+    </mat-tab>
+</mat-tab-group>
