--- a/src/app/components/theme-button/theme-button.component.html
+++ b/src/app/components/theme-button/theme-button.component.html
@@ -1,3 +1,1 @@
-<div class="theme-resolver">
-  <button mat-raised-button color="primary" (click)="showThemePicker()">Змінити тему</button>
-</div>
+<input type="checkbox" name="checkbox" class="switch" (change)="changeTheme($event)" [checked]="themeNameChecked">
