--- a/src/app/containers/classes/classes.component.html
+++ b/src/app/containers/classes/classes.component.html
@@ -15,28 +15,30 @@
                     <mat-expansion-panel-header>
                         <mat-panel-title>{{activeClass.key}}</mat-panel-title>
                     </mat-expansion-panel-header>
-                    <table mat-table [dataSource]='activeClass.value' multiTemplateDataRows>
-                        <ng-container matColumnDef='{{actClass}}' *ngFor='let actClass of displayedColumns'>
-                            <!-- localeHeader pipe chanes table header names from eng to ua language -->
-                            <th mat-header-cell *matHeaderCellDef> {{actClass | localeHeader}} </th>
-                            <td mat-cell *matCellDef="let class"> {{class[actClass]}} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="expandedDetail">
-                            <td mat-cell *matCellDef="let class" [attr.colspan]="displayedColumns.length">
-                                <div class="class-detail"
-                                    [@detailExpand]="class == expandedElement ? 'expanded' : 'collapsed'">
-                                    <webui-class-edit [class]="class" *ngIf="class == expandedElement">
-                                    </webui-class-edit>
-                                </div>
-                            </td>
-                        </ng-container>
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let currentClass; columns: displayedColumns;" class="class-row"
-                            [class.expanded-row]="expandedElement === currentClass"
-                            (click)="expandedElement = expandedElement === currentClass ? null : currentClass">
-                        </tr>
-                        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
-                    </table>
+                    <ng-template matExpansionPanelContent>
+                        <table mat-table [dataSource]='activeClass.value' multiTemplateDataRows>
+                            <ng-container matColumnDef='{{actClass}}' *ngFor='let actClass of displayedColumns'>
+                                <!-- localeHeader pipe chanes table header names from eng to ua language -->
+                                <th mat-header-cell *matHeaderCellDef> {{actClass | localeHeader}} </th>
+                                <td mat-cell *matCellDef="let class"> {{class[actClass]}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="expandedDetail">
+                                <td mat-cell *matCellDef="let class" [attr.colspan]="displayedColumns.length">
+                                    <div class="class-detail"
+                                        [@detailExpand]="class == expandedElement ? 'expanded' : 'collapsed'">
+                                        <webui-class-edit [class]="class" *ngIf="class == expandedElement">
+                                        </webui-class-edit>
+                                    </div>
+                                </td>
+                            </ng-container>
+                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                            <tr mat-row *matRowDef="let currentClass; columns: displayedColumns;" class="class-row"
+                                [class.expanded-row]="expandedElement === currentClass"
+                                (click)="expandedElement = expandedElement === currentClass ? null : currentClass">
+                            </tr>
+                            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
+                        </table>
+                    </ng-template>
                 </mat-expansion-panel>
             </mat-accordion>
         </ng-template>
@@ -50,28 +52,30 @@
                     <mat-expansion-panel-header>
                         <mat-panel-title>{{nonActiveClass.key}}</mat-panel-title>
                     </mat-expansion-panel-header>
-                    <table mat-table [dataSource]="nonActiveClass.value" multiTemplateDataRows>
-                        <ng-container matColumnDef="{{nonActClass}}" *ngFor="let nonActClass of displayedColumns">
-                            <!-- localeHeader pipe chanes table header names from eng to ua language -->
-                            <th mat-header-cell *matHeaderCellDef> {{nonActClass | localeHeader}} </th>
-                            <td mat-cell *matCellDef="let class"> {{class[nonActClass]}} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="expandedDetail">
-                            <td mat-cell *matCellDef="let class" [attr.colspan]="displayedColumns.length">
-                                <div class="class-detail"
-                                    [@detailExpand]="class == expandedElement ? 'expanded' : 'collapsed'">
-                                    <webui-class-edit [class]="class" *ngIf="class == expandedElement">
-                                    </webui-class-edit>
-                                </div>
-                            </td>
-                        </ng-container>
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let currentClass; columns: displayedColumns;" class="class-row"
-                            [class.expanded-row]="expandedElement === currentClass"
-                            (click)="expandedElement = expandedElement === currentClass ? null : currentClass">
-                        </tr>
-                        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
-                    </table>
+                    <ng-template matExpansionPanelContent>
+                        <table mat-table [dataSource]="nonActiveClass.value" multiTemplateDataRows>
+                            <ng-container matColumnDef="{{nonActClass}}" *ngFor="let nonActClass of displayedColumns">
+                                <!-- localeHeader pipe chanes table header names from eng to ua language -->
+                                <th mat-header-cell *matHeaderCellDef> {{nonActClass | localeHeader}} </th>
+                                <td mat-cell *matCellDef="let class"> {{class[nonActClass]}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="expandedDetail">
+                                <td mat-cell *matCellDef="let class" [attr.colspan]="displayedColumns.length">
+                                    <div class="class-detail"
+                                        [@detailExpand]="class == expandedElement ? 'expanded' : 'collapsed'">
+                                        <webui-class-edit [class]="class" *ngIf="class == expandedElement">
+                                        </webui-class-edit>
+                                    </div>
+                                </td>
+                            </ng-container>
+                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                            <tr mat-row *matRowDef="let currentClass; columns: displayedColumns;" class="class-row"
+                                [class.expanded-row]="expandedElement === currentClass"
+                                (click)="expandedElement = expandedElement === currentClass ? null : currentClass">
+                            </tr>
+                            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
+                        </table>
+                    </ng-template>
                 </mat-expansion-panel>
             </mat-accordion>
         </ng-template>
