--- a/src/app/containers/teacher-panel-statistics/teacher-panel-statistics.component.scss
+++ b/src/app/containers/teacher-panel-statistics/teacher-panel-statistics.component.scss
@@ -73,5 +73,5 @@ padding: 0 !important;
   font-size: 14px;
   font-weight: 500;
   color: rgba(0, 0, 0, 0.54);
-  padding-left: 38px;
+  padding: 0 0 15px 38px;
 }
