--- a/src/app/components/journal-homework-dialog/journal-homework-dialog.component.html
+++ b/src/app/components/journal-homework-dialog/journal-homework-dialog.component.html
@@ -59,7 +59,7 @@
 <div class="hometask-field" *ngIf="hometaskVisible"
     [ngStyle]="{'top.px': hometaskFieldTop - 200, 'left.px': hometaskFieldLeft}">
     <strong>{{lessonData.homework.date | journalDateFormat}}</strong>
-    <form [formGroup]="homeworkFieldForm">
+    <form>
         <mat-form-field>
             <textarea matInput
                 name="hometask"
