--- a/src/app/components/journal-table/journal-table.component.html
+++ b/src/app/components/journal-table/journal-table.component.html
@@ -72,7 +72,7 @@
     [ngStyle]="{'top.px': markFieldTop, 'left.px': markFieldLeft}"
 >
     {{chosenElement.studentFullName}}, <strong>{{chosenLesson.dateMark | journalDateFormat}}</strong>
-    <form [formGroup]="markFieldForm">
+    <form>
         <mat-form-field>
             <input matInput
                 type="number"
