added styles to student panel

--- a/src/app/components/homework-dialog/homework-dialog.component.scss
+++ b/src/app/components/homework-dialog/homework-dialog.component.scss
@@ -30,7 +30,7 @@ mat-dialog-content {
     overflow: auto;
   }
   h1 {
-    color: #36266d;
+    color: var(--homework-dialog-font-color);
   }
 }
 
