--- a/src/app/containers/student-diary/student-diary.component.scss
+++ b/src/app/containers/student-diary/student-diary.component.scss
@@ -54,7 +54,7 @@
   h3 {
     margin: 3rem 2rem;
     text-align: center;
-    color: var(--font-color);
+    color: var(--diary-font-color);
   }
 }
 
