--- a/src/app/components/mark-component/add-mark/add-mark.component.scss
+++ b/src/app/components/mark-component/add-mark/add-mark.component.scss
@@ -19,7 +19,7 @@
         left: 0;
         width: 100%;
         height: 10px;
-        background-color: var(--accent-color);
+        background-color: var(--alternative-accent-color);
       }  
 }
 form{
@@ -33,8 +33,9 @@ mat-card-actions {
   display: flex;
   width: 100%;
   justify-content: flex-end;
-  
+
   &>button:enabled{
-    background-color: var(--accent-color);
+    background-color: var(--light-color);
   }
 }
+
