add table at userIfo component

--- a/src/app/containers/authorization/login-user/login-user.component.html
+++ b/src/app/containers/authorization/login-user/login-user.component.html
@@ -3,7 +3,7 @@
           <h1 class="mat-h1 mat-headline">Вхід в систему</h1>
           <p>
             <mat-form-field>
-              <input type="text" matInput placeholder="Логін" formControlName="username"/>
+              <input type="text" matInput placeholder="Логін" color='accent' formControlName="username"/>
               <mat-icon matSuffix>person</mat-icon>
             </mat-form-field>
           </p>
