--- a/src/app/containers/classes/classes.component.html
+++ b/src/app/containers/classes/classes.component.html
@@ -6,7 +6,7 @@
     <webui-create-class></webui-create-class>
 </div>
 
-<mat-tab-group mat-stretch-tabs class='tab'>
+<!-- <mat-tab-group mat-stretch-tabs class='tab'>
     <mat-tab label='Активні'>
         <ng-template matTabContent>
             <mat-accordion>
@@ -15,10 +15,13 @@
                     <mat-expansion-panel-header>
                         <mat-panel-title>{{activeClass.key}}</mat-panel-title>
                     </mat-expansion-panel-header>
-                    <ng-template matExpansionPanelContent>
+                    <ng-template matExpansionPanelContent> -->
+                        
                         <table mat-table [dataSource]='activeClass.value' multiTemplateDataRows>
                             <ng-container matColumnDef='{{actClass}}' *ngFor='let actClass of displayedColumns'>
+                                
                                 <!-- localeHeader pipe chanes table header names from eng to ua language -->
+                                
                                 <th mat-header-cell *matHeaderCellDef> {{actClass | localeHeader}} </th>
                                 <td mat-cell *matCellDef="let class"> {{class[actClass]}} </td>
                             </ng-container>
@@ -44,7 +47,7 @@
         </ng-template>
     </mat-tab>
 
-    <mat-tab label="Не активні">
+    <!-- <mat-tab label="Не активні">
         <ng-template matTabContent>
             <mat-accordion>
                 <mat-expansion-panel *ngFor="let nonActiveClass of nonActiveUniqueClassList | keyvalue: sortKeys"
@@ -54,9 +57,13 @@
                     </mat-expansion-panel-header>
                     <ng-template matExpansionPanelContent>
                         <table mat-table [dataSource]="nonActiveClass.value" multiTemplateDataRows>
-                            <ng-container matColumnDef="{{nonActClass}}" *ngFor="let nonActClass of displayedColumns">
+                            <ng-container matColumnDef="{{nonActClass}}" *ngFor="let nonActClass of displayedColumns"> -->
+                               
+                               
                                 <!-- localeHeader pipe chanes table header names from eng to ua language -->
-                                <th mat-header-cell *matHeaderCellDef> {{nonActClass | localeHeader}} </th>
+                                
+                                
+                                <!-- <th mat-header-cell *matHeaderCellDef> {{nonActClass | localeHeader}} </th>
                                 <td mat-cell *matCellDef="let class"> {{class[nonActClass]}} </td>
                             </ng-container>
                             <ng-container matColumnDef="expandedDetail">
@@ -80,4 +87,4 @@
             </mat-accordion>
         </ng-template>
     </mat-tab>
-</mat-tab-group>
+</mat-tab-group> -->
